  - #4394, Allow FULL OUTER JOIN on geometry equality operator (Darafei Praliaskouski)
  - #4441, Make GiST penalty friendly to multi-column indexes and build single-column
           ones faster. (Darafei Praliaskouski)
  - #4403, Support for shp2pgsql ability to reproject with copy mode (-D) (Regina Obe)
  - #4410, More descriptive error messages about SRID mismatch (Darafei Praliaskouski)
  - #4399, TIN and Triangle output support in all output functions (Darafei 
           Praliaskouski)

* Fixes *
  - #4342, Move deprecated functions into legacy.sql file
  - #4445, Fix a bug in geometry_le (Raúl Marín)
  - #4189, Fix undefined behaviour in SADFWrite (Raúl Marín)
  - #4191, Fix undefined behaviour in ptarray_clone_deep (Raúl Marín)
  - #4211, Fix ST_Subdivide for minimal exterior ring with minimal hole (Darafei
           Praliaskouski)
  - #4326, Allocate enough memory in gidx_to_string (Raúl Marín)
  - #4190, Avoid undefined behaviour in gserialized_estimate (Raúl Marín)
  - #4233, Fix undefined behaviour in gserialized_spgist_picksplit_nd (Raúl Marín)
  - #4247, Avoid undefined behaviour in next_float functions (Raúl Marín)
  - #4249, Fix undefined behaviour in raster intersection (Raúl Marín)
  - #4246, Fix undefined behaviour in ST_3DDistance (Raúl Marín)
  - #4188, Avoid division by zero in KMeans (Raúl Marín)
  - #3457, Fix raster envelope shortcut in ST_Clip (Sai-bot)
  - #4361, Fix postgis_type_name with (GEOMETRYM,3) (Matt Bretl)
  - #4275, Avoid passing a NULL pointer to GEOSisEmpty (Raúl Marín)
  - #4296, Use `server_version_num` instead of parsing `version()` (Raúl Marín)
  - #4314, ST_ClipByBox2D: Do not throw when the geometry is invalid (Raúl Marín)
  - #4383, Fix undefined behaviour in implicit conversions (Raúl Marín)
  - #4334, Fix upgrade issues related to renamed function parameters (Raúl Marín)
  - #4388, AddRasterConstraints: Ignore NULLs when generating constraints (Raúl Marín)