@@ -195,8 +195,10 @@ Additional features enabled if you are running Proj6+ and PostgreSQL 12
            ones faster. (Darafei Praliaskouski)
   - #4403, Support for shp2pgsql ability to reproject with copy mode (-D) (Regina Obe)
   - #4410, More descriptive error messages about SRID mismatch (Darafei Praliaskouski)
-  - #4399, TIN and Triangle output support in all output functions (Darafei 
+  - #4399, TIN and Triangle output support in all output functions (Darafei
            Praliaskouski)
+  - #3719, Impose minimun number of segments per arc during linearization
+           (Dan Baston / City of Helsinki, Raúl Marín)
 
 * Fixes *
   - #4342, Move deprecated functions into legacy.sql file
